data/pc/1.9/README.md
<details><summary>Collected (33)</summary>
<p>

| Packet |
| --- |
| login |
| custom_payload |
| difficulty |
| spawn_position |
| abilities |
| held_item_slot |
| entity_status |
| statistics |
| player_info |
| position |
| world_border |
| update_time |
| window_items |
| set_slot |
| map_chunk |
| entity_metadata |
| entity_update_attributes |
| update_health |
| experience |
| tile_entity_data |
| spawn_entity_living |
| entity_velocity |
| entity_move_look |
| entity_head_rotation |
| rel_entity_move |
| multi_block_change |
| block_change |
| entity_equipment |
| spawn_entity |
| entity_teleport |
| entity_destroy |
| keep_alive |
| entity_look |

</p>
</details>
<details><summary>Missing (44)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| spawn_entity_weather |
| spawn_entity_painting |
| named_entity_spawn |
| animation |
| block_break_animation |
| block_action |
| boss_bar |
| tab_complete |
| chat |
| transaction |
| close_window |
| open_window |
| craft_progress_bar |
| set_cooldown |
| named_sound_effect |
| kick_disconnect |
| explosion |
| unload_chunk |
| game_state_change |
| world_event |
| world_particles |
| map |
| entity |
| vehicle_move |
| open_sign_entity |
| combat_event |
| bed |
| remove_entity_effect |
| resource_pack_send |
| respawn |
| camera |
| scoreboard_display_objective |
| attach_entity |
| scoreboard_objective |
| set_passengers |
| teams |
| scoreboard_score |
| title |
| update_sign |
| sound_effect |
| playerlist_header |
| collect |
| entity_effect |

</p>
</details>