data/pc/1.13/README.md
<details><summary>Collected (37)</summary>
<p>

| Packet |
| --- |
| login |
| custom_payload |
| difficulty |
| abilities |
| held_item_slot |
| declare_recipes |
| tags |
| entity_status |
| declare_commands |
| unlock_recipes |
| player_info |
| map_chunk |
| spawn_entity_living |
| entity_metadata |
| entity_update_attributes |
| position |
| world_border |
| update_time |
| spawn_position |
| window_items |
| set_slot |
| advancements |
| entity_velocity |
| entity_teleport |
| entity_head_rotation |
| update_health |
| experience |
| keep_alive |
| spawn_entity |
| rel_entity_move |
| multi_block_change |
| world_event |
| entity_move_look |
| entity_equipment |
| block_change |
| entity_destroy |
| entity_look |

</p>
</details>
<details><summary>Missing (49)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| spawn_entity_weather |
| spawn_entity_painting |
| named_entity_spawn |
| animation |
| statistics |
| block_break_animation |
| tile_entity_data |
| block_action |
| boss_bar |
| tab_complete |
| face_player |
| nbt_query_response |
| chat |
| transaction |
| close_window |
| open_window |
| craft_progress_bar |
| set_cooldown |
| named_sound_effect |
| kick_disconnect |
| explosion |
| unload_chunk |
| game_state_change |
| world_particles |
| map |
| entity |
| vehicle_move |
| open_sign_entity |
| craft_recipe_response |
| combat_event |
| bed |
| remove_entity_effect |
| resource_pack_send |
| respawn |
| camera |
| scoreboard_display_objective |
| attach_entity |
| scoreboard_objective |
| set_passengers |
| teams |
| scoreboard_score |
| title |
| stop_sound |
| sound_effect |
| playerlist_header |
| collect |
| entity_effect |
| select_advancement_tab |

</p>
</details>